# eCFR

./: .gitignore  CLAUDE.md  PROJECT.md  README.md  Taskfile.yml  feedback.txt  pyproject.toml  requirements.txt  setup.py
infra/: .terraform.lock.hcl  env.dev.tfvars  main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
src/: README.md  api_handler.py  compute_sizes.py  ecfr_client.py
src/bottle/: agency_sizes.json  ecfr_app.py
src/bottle/templates/: error.html  index.html
